# horizon-policies-plugin

./: .gitignore  AUTHORS  ChangeLog  README.md  README.rst  TESTS.md  dashboard.py  develop.bash  karma.conf.js  local.conf  lower-constraints.txt  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  static_bash.bash  test-requirements.txt  tox.ini
api/: client.py
enabled/: _50_policies_dashboard.py
misc_goodies/: copy_static_files.bash  copy_static_files.sh  update_static.sh
policies-plugin/: install.bash  local.conf  package.json  setup.cfg  test-requirements.txt
policies_panel/: tabs.py  tests.py  urls.py
policies_plugin/: __init__.py
policy-ui/: .gitignore  (+11 more)
sample-plugin/: AUTHORS  ChangeLog  README.rst  package.json  setup.cfg  update.bash
sample-plugin/devstack/: plugin.sh  settings
sample-plugin/sample_dashboard/api/rest/: __init__.py  sample_network.py
sample-plugin/sample_dashboard/dashboards/project/policy/: __init__.py  panel.py
sample-plugin/sample_dashboard/dashboards/project/sample/: panel.py  urls.py
sample-plugin/sample_dashboard/enabled/: _90_project_policy_panel_group_enabled.py  _91_project_policy_policies_panel_enabled.py
sample-plugin/sample_dashboard/static/app/core/openstack-service-api/: policy-client.service.js
sample-plugin/sample_dashboard/static/dashboard/project/policy/policies/: policies.controller.js
sample-plugin/sample_dashboard/static/dashboard/project/sample/: sample.module.js
sample-plugin/sample_dashboard/static/dashboard/project/sample/network/: networks.controller.js  table.html
(+341 files in other folders)
